brat/test/golden/error/no_thunk.brat.golden
Error in test/golden/error/no_thunk.brat@8:14
    Rz(2.0 / n); X
             ^

  Type mismatch when checking n
Expected: (right :: Float)
But got:  (n :: Nat)


